--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </select>
         </div>
 
-        <div class="g-recaptcha" data-sitekey="VOTRE_CLÉ_PUBLIQUE"></div>
+        <div class="g-recaptcha" data-sitekey="6LcBZwosAAAAAG8xMR5po1FuipWeEo-_mJlROYFN"></div>
 
         <button type="submit" class="btn bg-green-600 text-white px-4 py-2 rounded mt-2">Valider ma commande</button>
       </form>
